# chikos_resgistration_app__v4

./: .http  Cargo.toml  notes  notes.md  package-lock.json
backend/: Cargo.toml
backend/src/: api.rs  db.rs  main.rs  models.rs
backend/src/public/: index.html
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  routes.rs
frontend/src/components/: common.rs  enums.rs  fragments.rs  mod.rs
frontend/src/components/common/: button.rs  card.rs  icon.rs  input.rs  input_number.rs  mod.rs  paragraph.rs  radio.rs  thumbnail.rs
frontend/src/components/fragments/: form_row_input.rs  form_text_input.rs  mod.rs  registrant_card.rs
frontend/src/components/layouts/: mod.rs  register_form.rs  upload_photo.rs
frontend/src/components/views/: home.rs
frontend/src/styles/: app.css  index.css  tokens.css
src/: api.rs  db.rs  helpers.rs  main.rs  models.rs
src/public/: index.html
