[package]
name = "chikios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.160"
serde_json = "1.0.96"
mysql_async = "0.32.2"
anyhow = "1.0.71"
futures = { version = "=0.3.28", default-features = false }
bytes = "0.5.6"
uuid = {version = "1.3.3", features = ["v4"]}
image = "0.24.6"
common = {path = "../common"}