[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
trunk = "0.16.0"
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
common = {path= "../common"}
web-sys ={version="0.3.63", features=["HtmlInputElement"]}
gloo-console = "0.2.3"
gloo = "0.8.0"